<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_personal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:contentPadding="10dp"
        card_view:cardCornerRadius="3dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.9"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:gravity="left"
                    android:orientation="vertical">

                    <com.nexus.locum.locumnexus.customviews.UserTextView
                        android:tag="200"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:gravity="center"
                        android:text="@string/Financial_Years"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <com.nexus.locum.locumnexus.customviews.UserTextView
                        android:id="@+id/tvfinancialcYear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:gravity="center"
                        android:layout_marginStart="5dp"
                        android:tag="200"
                        android:text="2017-2018"
                        android:textColor="@color/md_grey_700"
                        android:textSize="12sp" />

                </LinearLayout>

                <com.nexus.locum.locumnexus.customviews.UserTextView
                    android:id="@+id/tvStatus"
                    android:layout_width="0dp"
                    android:layout_weight="0.33"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:padding="5dp"
                    android:gravity="center"
                    android:tag="100"
                    android:textAllCaps="true"
                    android:text="OPEN"
                    android:layout_gravity="center"
                    android:background="@drawable/round_corner_dark_green"
                    android:textColor="@color/md_green_900"
                    android:textSize="12sp" />


                <com.nexus.locum.locumnexus.customviews.UserTextView
                    android:id="@+id/tv_preferedMore"
                    android:tag="100"
                    android:layout_width="0dp"
                    android:layout_weight="0.1"
                    android:layout_height="wrap_content"
                    android:gravity="right|center"
                    android:layout_gravity="center"
                    android:drawableRight="@drawable/ic_more_vert_grey_24dp"
                    android:text=""
                    android:textColor="@color/md_grey_700"
                    android:textSize="12sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.33"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:gravity="left"
                    android:layout_marginEnd="5dp"
                    android:orientation="vertical">

                    <com.nexus.locum.locumnexus.customviews.UserTextView
                        android:tag="200"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:gravity="center"
                        android:text="@string/Start_Date"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <com.nexus.locum.locumnexus.customviews.UserTextView
                        android:id="@+id/tvstartdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:gravity="center|left"
                        android:tag="100"
                        android:text="@string/Start_Date"
                        android:textColor="@color/md_grey_700"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.33"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:gravity="left"
                    android:layout_marginEnd="5dp"
                    android:orientation="vertical">

                    <com.nexus.locum.locumnexus.customviews.UserTextView
                        android:tag="200"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:gravity="center"
                        android:text="@string/End_Date"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <com.nexus.locum.locumnexus.customviews.UserTextView
                        android:id="@+id/tvenddate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:gravity="center|left"
                        android:tag="100"
                        android:text="@string/Start_Date"
                        android:textColor="@color/md_grey_700"
                        android:textSize="12sp" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.33"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:gravity="left"
                    android:layout_marginEnd="5dp"
                    android:orientation="vertical">

                    <com.nexus.locum.locumnexus.customviews.UserTextView
                        android:tag="200"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:gravity="center|left"
                        android:text="@string/Tax_returns"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <com.nexus.locum.locumnexus.customviews.UserTextView
                        android:id="@+id/tvtaxreturnofCurrentYTear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:gravity="center|left"
                        android:tag="100"
                        android:text="@string/Start_Date"
                        android:textColor="@color/md_grey_700"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.33"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:gravity="left"
                    android:layout_marginEnd="5dp"
                    android:orientation="vertical">

                    <com.nexus.locum.locumnexus.customviews.UserTextView
                        android:tag="200"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:gravity="center|left"
                        android:text="@string/Tax_Submitted_Dat"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <com.nexus.locum.locumnexus.customviews.UserTextView
                        android:id="@+id/tvtaxsubmitteddate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:gravity="center|left"
                        android:tag="100"
                        android:text="@string/Start_Date"
                        android:textColor="@color/md_grey_700"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.33"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:gravity="left"
                    android:layout_marginEnd="5dp"
                    android:orientation="vertical">

                    <com.nexus.locum.locumnexus.customviews.UserTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:gravity="center|left"
                        android:tag="200"
                        android:text="@string/Tax_Submission_By"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <com.nexus.locum.locumnexus.customviews.UserTextView
                        android:id="@+id/tvtaxsubmissionBy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:gravity="center|left"
                        android:tag="100"
                        android:text="@string/Start_Date"
                        android:textColor="@color/md_grey_700"
                        android:textSize="12sp" />

                </LinearLayout>





            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
